bug fixed: overflow comment cyworld css

--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -96,7 +96,7 @@ content {
     background-color: grey;
     padding: 1%;
     width: 1200px;
-    height: 100%;
+    height: 800px;
     border-radius: 9px;
 }
 
@@ -139,7 +139,14 @@ content {
     font-size: 20px;
 }
 
-#midContainer {
+#midContainer_profile{
+    font-size: 15px;
+    flex: 0.6;
+    border-radius: 25px;
+
+}
+#midContainer_ranking, #midContainer_mypage {
+    display: none;
     font-size: 15px;
     flex: 0.6;
     border-radius: 25px;
@@ -191,9 +198,10 @@ content {
     display: flex;
     justify-content: space-between;
     border: #205d01 2px solid;
-    height: 20%;
-    width: 70%;
-    margin-bottom: 10px;
+    border-radius: 5px;
+    height: 10%;
+    width: 95%;
+    margin: 5px;
     padding: 2px;
 }
 
